# FastAPI-MongoDb-ELK

./: .env  README.md  docker-compose.yaml  main.py  pyproject.toml  rs_1_setup.js  rs_2_setup.js  rs_cnf_setup.js  sharded_cluster_setup.js
api/: __init__.py
api/v1/: __init__.py  comments.py  posts.py
core/: config.py  context.py  logger.py  pagination.py
db/: init_db.py  mongo.py
helpers/: exceptions.py
infra/: Dockerfile
infra/filebeat/: Dockerfile  filebeat.yaml
infra/logstash/: logstash.conf
middleware/: main.py  request_log.py
models/: __init__.py  comment.py  post.py
schemas/: author.py  comment.py  post.py
simple_mongo/: README.md  docker-compose.yaml  main.py
